# odl-kernel

./: CHANGELOG.md  LICENSE  README.md  USAGE.md  llms.txt  pyproject.toml
src/odl_kernel/: __init__.py
src/odl_kernel/engine/: analyzer.py
src/odl_kernel/engine/logic/: introspection.py  node_id_generator.py  transition_rules.py  variable_resolver.py
src/odl_kernel/engine/logic/expansion/: __init__.py  base.py  iterate.py  loop.py  parallel.py  serial.py
src/odl_kernel/types/: __init__.py  entities.py  enums.py
src/odl_kernel/types/structs/: __init__.py  input_intervention_intent.py  input_job_snapshot.py  input_kernel_event.py  input_kernel_event_type.py  output_analysis_result.py  output_command_type.py  output_job_update.py  output_runtime_command.py
tests/integration/: conftest.py  harness.py
tests/integration/scenarios/: test_sc01_deep_prop.py  test_sc02_smart_loop.py  test_sc03_dialogue.py  test_sc10_strat_parallel.py  test_sc11_generate_team.py  test_sc12_generate_team_2.py  test_sc13_ensemble.py  test_sc14_gate_serial.py  test_sc20_simple_fanout.py  test_sc21_serial_fanout.py  test_sc22_fanout_team.py  test_sc23_fanout_serial_complex.py  test_sc31_fanout_gate.py  test_sc99_job_failure.py
tests/unit/engine/logic/: test_node_id_generator.py  test_transition_rules.py  test_variable_resolver.py
tests/unit/engine/logic/expansion/: test_iterate_expansion.py  test_loop_expansion.py  test_parallel_expansion.py  test_serial_expansion.py
tests/unit/types/: test_types_integrity.py
